added parts to our story

--- a/wedding-website/public/index.html
+++ b/wedding-website/public/index.html
@@ -70,5 +70,10 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+    <script
+      src="https://www.paypal.com/sdk/js?client-id=AcAN_92XIlQtRPs8T-68WzC_TcodWPS4biX0Og44AKbINg4Kgz01O48yx2kDa8Z1GnHxURHHlgXr-FUo&enable-funding=venmo&currency=USD"
+      data-sdk-integration-source="button-factory"
+    ></script>
   </body>
 </html>
