fixed spelling on questions page, added arrow for table when screen is movile on rates page

--- a/wedding-website/public/index.html
+++ b/wedding-website/public/index.html
@@ -34,6 +34,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>Keenan & Diana</title>
   </head>
   <body>
@@ -72,7 +76,7 @@
     ></script>
 
     <script
-      src="https://www.paypal.com/sdk/js?client-id=AcAN_92XIlQtRPs8T-68WzC_TcodWPS4biX0Og44AKbINg4Kgz01O48yx2kDa8Z1GnHxURHHlgXr-FUo&enable-funding=venmo&currency=USD"
+      src="https://www.paypal.com/sdk/js?client-id=AYVl-IHaY7eEmbX1lCybJ4rTRDRj4fpTfW0-XJACnaLacGy2Ar-xOgw_elUkXEHAZbCnn7lSC_7LRFEi&enable-funding=venmo&currency=USD"
       data-sdk-integration-source="button-factory"
     ></script>
   </body>
